kustomize/Mesh/overlays/backend/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: rollouts-httpbin
  namespace: httpbin
spec:
  strategy:
    canary:
      # Reference to a Service which the controller updates to point to the canary ReplicaSet
      canaryService: backend
      # Reference to a Service which the controller updates to point to the stable ReplicaSet
      stableService: backend
      trafficRouting:
        istio:
          virtualServices:
          # One or more virtualServices can be configured
          # Reference to a VirtualService which the controller updates with canary weights
          - name: backend
            # Optional if there is a single HTTP route in the VirtualService, otherwise required
           # routes:
           # - http-primary
            # Optional if there is a single HTTPS/TLS route in the VirtualService, otherwise required
           # tlsRoutes:
            # Below fields are optional but if defined, they should match exactly with at least one of the TLS route match rules in your VirtualService
           # - port: 443 # Only required if you want to match any rule in your VirtualService which contains this port
              # Only required if you want to match any rule in your VirtualService which contain all these SNI hosts
           #   sniHosts:
           #   - reviews.bookinfo.com
           #   - localhost
          #- name: rollouts-demo-vsvc2
            # Optional if there is a single HTTP route in the VirtualService, otherwise required
          #  routes:
          #    - http-secondary
            # Optional if there is a single HTTPS/TLS route in the VirtualService, otherwise required
           # tlsRoutes:
              # Below fields are optional but if defined, they should match exactly with at least one of the TLS route match rules in your VirtualService
            #  - port: 443 # Only required if you want to match any rule in your VirtualService which contains this port
                # Only required if you want to match any rule in your VirtualService which contain all these SNI hosts
             #   sniHosts:
             #     - reviews.bookinfo.com
             #     - localhost
            #tcpRoutes:
              # Below fields are optional but if defined, they should match exactly with at least one of the TCP route match rules in your VirtualService
            #  - port: 8020 # Only required if you want to match any rule in your VirtualService which contains this port
