kustomize/Mesh/overlays/backend/vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: backend-vs
  namespace: httpbin
spec:
  hosts:
  - 'backend'
  http:
  - route:
    - destination:
        host: backend
        subset: stable
      weight: 100
    - destination:
        host: backend
        subset: canary
      weight: 100
